--- a/.gitmodules
+++ b/.gitmodules
@@ -205,3 +205,6 @@
 [submodule "bundle/vim-arduino-ino"]
 	path = bundle/vim-arduino-ino
 	url = https://github.com/jplaut/vim-arduino-ino
+[submodule "bundle/vim-tmux-navigator"]
+	path = bundle/vim-tmux-navigator
+	url = git@github.com:christoomey/vim-tmux-navigator.git
