--- a/.gitmodules
+++ b/.gitmodules
@@ -167,3 +167,6 @@
 [submodule "bundle/vim-eunuch"]
 	path = bundle/vim-eunuch
 	url = git@github.com:tpope/vim-eunuch.git
+[submodule "bundle/textile"]
+	path = bundle/textile
+	url = http://github.com/timcharper/textile.vim.git
