--- a/.gitmodules
+++ b/.gitmodules
@@ -137,9 +137,6 @@
 [submodule "bundle/vim-indexed-search"]
 	path = bundle/vim-indexed-search
 	url = git://github.com/henrik/vim-indexed-search.git
-[submodule "bundle/ctrp"]
-	path = bundle/ctrp
-	url = git://github.com/kien/ctrlp.vim.git
 [submodule "bundle/vim-easymotion"]
 	path = bundle/vim-easymotion
 	url = git://github.com/Lokaltog/vim-easymotion.git
@@ -179,3 +176,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = git@github.com:majutsushi/tagbar.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim
